glx/testdata/invalid/assertion-participant-and-value/archive.glx
# Invalid: Both participant and value present
# This should fail validation - they are mutually exclusive

persons:
  person-john:
    properties:
      name:
        value: "John Smith"
        fields:
          given: "John"
          surname: "Smith"

events:
  event-marriage:
    type: marriage

sources:
  source-cert:
    title: "Certificate"

citations:
  citation-cert:
    source: source-cert

# This is INVALID - cannot have both participant and value
assertions:
  assertion-invalid:
    subject: event-marriage
    participant:
      person: person-john
      role: groom
    value: "some value"  # ERROR: should not be present with participant
    citations:
      - citation-cert
    confidence: high

